module-4/style.css
*{
    padding: 0%;
    margin: 0%;
    /* background-color: rgb(15, 190, 190); */
}
nav{
    display: flex;
    justify-content: space-around;
    align-items: center;
    background-color: rgb(253, 252, 251);
    height: 80px;
    /* border-bottom: 3px solid black; */
   box-shadow: 0px 0px 6px 6px #888888;
}
nav img{
    width: 180px;
    height: 60px;
}

nav .navOpt ul{
    display: flex;
    align-items: center;
    list-style: none;
}

nav .navOpt ul li{
    padding: 15px 20px;
}

nav .navOpt ul li a{
    color: black;
    text-decoration: none;
    font-size: 16px;
}

.top{
   
  

background: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url(../img/Rocketman_Hero.png);

    background-size: cover;
    background-position: 50%;
    height: 550px;
    position: relative;
    width: 100%;
    padding-top: 47.5px;
    padding-left: 47.5px;
    
}

.para1{
    color: white;
    font-size: 30px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-weight: 400;
    font-size: 64px;
    font-weight: 100;
    margin-bottom: 12px;
}

.para2{
    color: white;
    font-size: 12px;
    font-family: Arial, Helvetica, sans-serif;
    font-size:18px ;
}

.btn{
    margin-top: 22px;
    display: block;
    font-size: 22px;
    font-family: 'Courier New', Courier, monospace;
    height: 40px;
    width: 180px;
    border: none;
    border-radius: 6px;
}

